# pg_jsonschema

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  META.json  README.md  docker-compose.yaml  pg_json_schema.control  pg_jsonschema.control
.ci/: docker-compose.yaml
.github/workflows/: coverage.yml  pgxn-release.yml  release.yml  test.yml
dockerfiles/db/: Dockerfile
scripts/: check-version.sh  push-tag.sh  release.sh  update-version.sh
sql/: pg_jsonschema--0.1.4--0.2.0.sql  pg_jsonschema--0.3.0--0.3.1.sql
src/: lib.rs
src/compiled/: cache.rs  callsite.rs  mod.rs
