[package]
name = "pg_jsonschema"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = "=0.6.0-alpha.0"
serde = "1.0"
serde_json = "1.0"
jsonschema = {version = "0.16.0", default-features = false, features = []}

[dev-dependencies]
pgx-tests = "=0.6.0-alpha.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
